--- a/public/test.html
+++ b/public/test.html
@@ -1,1 +1,31 @@
-<a target="_blank" class="me-1" href="https://github.com/ST28Dev"><img id="github_logo" alt="github_logo"></a>
+<p class=\"font-lato\">This section will catalog some of the inputs requested by the game. It will hopefully
+    simplify/introduce what each term requests for input.</p>
+<h4 class=\"font-ubuntu\"><u>Suffixes</u></h4>
+<p class=\"font-lato\"> Suffixes will primarily be used to signify whether a noun, or verb should be singular/plural, or
+    present/past tense/ending with ing respectively. For nouns, if no suffix is specified, assume that both
+    singular/plural forms are possible.</p>
+<dl class=\"row ms-3\">
+    <dt class=\"col-4 font-ubuntu\">Plural</dt>
+    <dd class=\"col-8 font-lato\">Requests a noun that ends with s or es if necessary. Multiple of an item.</dd>
+    <dt class=\"col-4 font-ubuntu\">Singular</dt>
+    <dd class=\"col-8 font-lato\">Requests a single noun.</dd>
+</dl>
+<h4 class=\"font-ubuntu\"><u>Class of Words</u></h4>
+<p class=\"font-lato\"> Prompts will request a variety of types of words, ranging from nouns to verbs. They are pretty
+    elementary, but, just for reference, here is a list of possible requests from prompts:</p>
+<dl class=\"row ms-3\">
+    <dt class=\"col-4 font-ubuntu\">Noun</dt>
+    <dd class=\"col-8 font-lato\">A thing, instance, item, or person</dd>
+    <dt class=\"col-4 font-ubuntu\">Adjective</dt>
+    <dd class=\"col-8 font-lato\">Something that describes a noun (e.g. big, small, nice)</dd>
+    <dt class=\"col-4 font-ubuntu\">Verb</dt>
+    <dd class=\"col-8 font-lato\">An action done by a noun (e.g. kick, punch, love)</dd>
+    <dt class=\"col-4 font-ubuntu\">Color</dt>
+    <dd class=\"col-8 font-lato\">A bright, wonderful thing that we are privileged enough to witness 😉(e.g. red, blue,
+        green)</dd>
+    <dt class=\"col-4 font-ubuntu\">Name</dt>
+    <dd class=\"col-8 font-lato\">A label to distinguish living things from one another</dd>
+    <dt class=\"col-4 font-ubuntu\">Slogan</dt>
+    <dd class=\"col-8 font-lato\">A saying/statement worthy of shouting out (e.g. HERE'S JOHNNY (from <u>The Shining</u>
+        [no copyright intended 🙂]))</dd>
+</dl>
